WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
160620
32-bit JSC test failure: stress/instanceof-late-constant-folding.js
https://bugs.webkit.org/show_bug.cgi?id=160620
Summary
32-bit JSC test failure: stress/instanceof-late-constant-folding.js
Ryan Haddad
Reported
2016-08-05 16:50:16 PDT
32-bit JSC test failure: stress/instanceof-late-constant-folding.js ** The following JSC stress test failures have been introduced: stress/instanceof-late-constant-folding.js.always-trigger-copy-phase stress/instanceof-late-constant-folding.js.default stress/instanceof-late-constant-folding.js.dfg-eager stress/instanceof-late-constant-folding.js.dfg-eager-no-cjit-validate stress/instanceof-late-constant-folding.js.no-cjit-validate-phases stress/instanceof-late-constant-folding.js.no-llint Running stress/instanceof-late-constant-folding.js.default stress/instanceof-late-constant-folding.js.default: Exception: result incorrect stress/instanceof-late-constant-folding.js.default: ERROR: Unexpected exit code: 3 FAIL: stress/instanceof-late-constant-folding.js.default
https://build.webkit.org/builders/Apple%20El%20Capitan%2032-bit%20JSC%20%28BuildAndTest%29/builds/3162
Attachments
Patch
(3.08 KB, patch)
2016-08-05 18:02 PDT
,
Keith Miller
fpizlo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2016-08-05 18:02:22 PDT
Created
attachment 285471
[details]
Patch
Keith Miller
Comment 2
2016-08-05 18:06:40 PDT
Committed
r204209
: <
http://trac.webkit.org/changeset/204209
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug