32-bit JSC test failure: stress/instanceof-late-constant-folding.js https://bugs.webkit.org/show_bug.cgi?id=160620

Reviewed by Filip Pizlo.

* dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::compile):

Canonical link: https://commits.webkit.org/178745@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204209 268f45cc-cd09-0410-ab3c-d52691b4dbfc